[workspace]
members = [
    "book",
    "turshi",
    "curves",
    "groupmap",
    "hasher",
    "kimchi",
    "kimchi/snarky-deriver/",
    "msm",
    "optimism",
    "poseidon",
    "poseidon/export_test_vectors",
    "poly-commitment",
    "signer",
    "tools/kimchi-visu",
    "utils",
    "internal-tracing",
    "ivc",
    "folding"
]
resolver = "2"

[workspace.dependencies]
ark-algebra-test-templates = "0.3.0"
ark-bn254 = { version = "0.3.0" }
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-ff = { version = "0.3.0", features = ["parallel", "asm"] }
ark-poly = { version = "0.3.0", features = ["parallel"] }
ark-serialize = "0.3.0"
ark-std = "0.3.0"
bcs = "0.1.3"
base64 = "0.21.5"
bitvec = "1.0.0"
blake2 = "0.10.0"
bs58 = "0.5.0"
clap = "4.4.6"
colored = "2.0.0"
command-fds = "0.3"
convert_case = "0.6.0"
criterion = "0.5"
elf = "0.7.2"
env_logger = "0.11.1"
hex = { version = "0.4", features = ["serde"] }
iai = "0.1"
itertools = "0.12.1"
libc = "0.2.62"
libflate = "2"
log = "0.4.20"
num-bigint = { version = "0.4.3", features = ["rand", "serde"] }
num-derive = "0.4"
num-integer = "0.1.45"
num-traits = "0.2"
ocaml = { version = "0.22.2" }
ocaml-gen = { version = "0.1.5" }
once_cell = "1.10.0"
os_pipe = { version = "1.1.4", features = ["io_safety"] }
proc-macro2 = "1.0.43"
proptest = "1.0.0"
proptest-derive = "0.4.0"
quote = "1.0.21"
rand = { version = "0.8.0", features = ["std_rng"] }
rand_chacha = { version = "0.3.0" }
rand_core = { version = "0.6.0" }
rayon = "1"
regex = "1.10.2"
rmp-serde = "1.1.1"
secp256k1 = "0.28.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
serde_with = "3.6.0"
sha2 = "0.10.0"
sha3 = "0.10.8"
strum = "0.26.1"
strum_macros = "0.26.1"
syn = { version = "1.0.109", features = ["full"] }
thiserror = "1.0.30"
tinytemplate = "1.1"
wasm-bindgen = "=0.2.90"

folding = { path = "./folding", version = "0.1.0" }
groupmap = { path = "./groupmap", version = "0.1.0" }
internal-tracing = { path = "./internal-tracing", version = "0.1.0" }
kimchi = { path = "./kimchi", version = "0.1.0", features = ["bn254"] }
kimchi-visu = { path = "./tools/kimchi-visu", version = "0.1.0" }
kimchi-msm = { path = "./msm", version = "0.1.0" }
mina-curves = { path = "./curves", version = "0.1.0" }
mina-hasher = { path = "./hasher", version = "0.1.0" }
mina-poseidon = { path = "./poseidon", version = "0.1.0" }
o1-utils = { path = "./utils", version = "0.1.0" }
optimism = { path = "./optimism", version = "0.1.0" }
poly-commitment = { path = "./poly-commitment", version = "0.1.0" }
signer = { path = "./signer", version = "0.1.0" }
snarky-deriver = { path = "./kimchi/snarky-deriver", version = "0.1.0" }
turshi = { path = "./turshi", version = "0.1.0" }
utils = { path = "./utils", version = "0.1.0" }

[profile.release]
lto = true
panic = 'abort'
# codegen-units = 1
