[workspace]
members = [
  "arrabbiata",
  "book",
  "crates/*",
  "curves",
  "folding",
  "groupmap",
  "hasher",
  "internal-tracing",
  "ivc",
  "kimchi",
  "kimchi-stubs",
  "msm",
  "mvpoly",
  "o1vm",
  "plonk-neon",
  "plonk-wasm",
  "poly-commitment",
  "poseidon",
  "poseidon/export_test_vectors",
  "saffron",
  "signer",
  "tools/kimchi-visu",
  "turshi",
  "utils",
  "xtask",
]
resolver = "2"

[workspace.dependencies]
ark-algebra-test-templates = "0.5"
ark-bn254 = { version = "0.5" }
ark-ec = { version = "0.5", features = ["parallel"] }
ark-ff = { version = "0.5", features = ["parallel", "asm"] }
ark-poly = { version = "0.5", features = ["parallel"] }
ark-serialize = "0.5"
ark-std = { version = "0.5", features = ["parallel"] }
ark-test-curves = { version = "0.5", features = ["parallel", "asm"] }
base64 = "0.21.5"
bcs = "0.1.3"
bitvec = "1.0.0"
blake2 = "0.10.0"
bnum = { version = "0.13" }
bs58 = "0.5.0"
clap = "4.4.6"
command-fds = "0.3"
console_error_panic_hook = { version = "0.1.6" }
criterion = { version = "0.5", features = [
  "cargo_bench_support",
  "html_reports",
] }
derivative = { version = "2.0", features = ["use_core"] }
elf = "0.7.2"
env_logger = "0.11.1"
getrandom = { version = "0.2.15", features = ["js"] }
hex = { version = "0.4", features = ["serde"] }
iai = "0.1"
itertools = "0.12.1"
js-sys = "=0.3.64"
libc = "=0.2.169"
libflate = "2"
log = "0.4.20"
num-bigint = { version = "0.4.4", features = ["rand", "serde"] }
num-integer = "0.1.45"
ocaml = { version = "0.22.2" }
ocaml-gen = { version = "1.0.0" }
once_cell = "=1.21.3"
os_pipe = { version = "1.1.4", features = ["io_safety"] }
paste = "1.0.15"
proptest = "1.0.0"
proptest-derive = "0.4.0"
rand = { version = "0.8.5", features = ["std_rng"] }
rand_chacha = { version = "0.3.0" }
rand_core = { version = "0.6.3" }
rayon = "=1.10.0"
regex = "1.10.2"
rmp-serde = "1.2.0"
secp256k1 = "0.28.2"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "^1.0.109"
serde_with = "3.12"
sha2 = "0.10.0"
sha3 = "0.10.8"
spmc = "=0.3.0"
strum = "0.26.1"
strum_macros = "0.26.1"
thiserror = { version = "2", default-features = false }
tikv-jemalloc-ctl = { version = "0.5" }
tikv-jemallocator = { version = "0.5" }
tinytemplate = "1.1"
wasm-bindgen = "=0.2.89"
wasm-bindgen-test = ">=0.3.0"
zeroize = "1.7"

arkworks = { path = "crates/arkworks" }
arrabbiata = { path = "./arrabbiata", version = "0.1.0" }
folding = { path = "./folding", version = "0.1.0" }
groupmap = { path = "./groupmap", version = "0.1.0" }
internal-tracing = { path = "./internal-tracing", version = "0.1.0" }
kimchi = { path = "./kimchi", version = "0.1.0", features = ["bn254"] }
kimchi-msm = { path = "./msm", version = "0.1.0" }
kimchi-stubs = { path = "./kimchi-stubs", version = "0.1.0" }
kimchi-visu = { path = "./tools/kimchi-visu", version = "0.1.0" }
mina-curves = { path = "./curves", version = "0.1.0" }
mina-hasher = { path = "./hasher", version = "0.1.0" }
mina-poseidon = { path = "./poseidon", version = "0.1.0" }
mvpoly = { path = "./mvpoly", version = "0.1.0" }
o1-utils = { path = "./utils", version = "0.1.0" }
o1vm = { path = "./o1vm", version = "0.1.0" }
optimism = { path = "./optimism", version = "0.1.0" }
plonk_wasm = { path = "./plonk-wasm", version = "0.1.0" }
poly-commitment = { path = "./poly-commitment", version = "0.1.0" }
saffron = { path = "./saffron", version = "0.1.0" }
signer = { path = "./signer", version = "0.1.0" }
turshi = { path = "./turshi", version = "0.1.0" }
utils = { path = "./utils", version = "0.1.0" }
wasm-types = { path = "./crates/wasm-types" }

[profile.release]
lto = true
panic = 'abort'
# codegen-units = 1

[profile.release.package.plonk_wasm]
debug = true
