[workspace]
members = [
  "arrabbiata",
  "crates/*",
  "curves",
  "groupmap",
  "hasher",
  "internal-tracing",
  "kimchi",
  "kimchi-stubs",
  "mina-tx-type",
  "msm",
  "mvpoly",
  "o1vm",
  "plonk-wasm",
  "poly-commitment",
  "poseidon",
  "poseidon/export_test_vectors",
  "signer",
  "tools/kimchi-visu",
  "utils",
  "xtask",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.92"
license = "Apache-2.0"
repository = "https://github.com/o1-labs/proof-systems"
homepage = "https://o1-labs.github.io/proof-systems/"
documentation = "https://o1-labs.github.io/proof-systems/rustdoc/"

[workspace.dependencies]
ark-algebra-test-templates = "0.5"
ark-bn254 = { version = "0.5" }
ark-ec = { version = "0.5", features = ["parallel"] }
ark-ff = { version = "0.5", features = ["parallel", "asm"] }
ark-poly = { version = "0.5", features = ["parallel"] }
ark-serialize = "0.5"
ark-std = { version = "0.5", features = ["parallel"] }
ark-test-curves = { version = "0.5", features = ["parallel", "asm"] }
base64 = "0.21.5"
bcs = "0.1.3"
bitvec = "1.0.0"
blake2 = "0.10.0"
bs58 = "0.5.0"
clap = "4.4.6"
command-fds = "0.3"
console_error_panic_hook = { version = "0.1.6" }
criterion = { version = "0.5", features = [
  "cargo_bench_support",
  "html_reports",
] }
elf = "0.7.2"
env_logger = "0.11.6"
getrandom = { version = "0.2.15", features = ["js"] }
hex = { version = "0.4", features = ["serde"] }
iai = "0.1"
itertools = "0.12.1"
js-sys = "=0.3.64"
libc = "=0.2.169"
libflate = "2"
log = "0.4.20"
num-bigint = { version = "0.4.6", features = ["rand", "serde"] }
num-integer = "0.1.45"
ocaml = { version = "0.22.2" }
ocaml-gen = { version = "1.0.0" }
once_cell = "=1.21.3"
os_pipe = { version = "1.1.4", features = ["io_safety"] }
paste = "1.0.15"
proptest = "1.0.0"
proptest-derive = "0.6.0"
rand = { version = "0.8.5", features = ["std_rng"] }
rand_chacha = { version = "0.3.0" }
rand_core = { version = "0.6.3" }
rayon = "=1.10.0"
regex = "1.10.2"
rmp-serde = "1.2.0"
rustversion = "1.0"
secp256k1 = "0.31.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "^1.0.109"
serde_with = "3.12"
sha2 = "0.10.0"
sha3 = "0.10.8"
spmc = "=0.3.0"
strum = "0.27.2"
strum_macros = "0.26.1"
subtle = { version = "2.5", default-features = false }
thiserror = { version = "2", default-features = false }
tikv-jemalloc-ctl = { version = "0.5" }
tikv-jemallocator = { version = "0.5" }
tinytemplate = "1.1"
wasm-bindgen = "=0.2.89"
wasm-bindgen-test = ">=0.3.0"
zeroize = "1"

arkworks = { path = "crates/arkworks" }
arrabbiata = { path = "./arrabbiata" }
groupmap = { path = "./groupmap" }
internal-tracing = { path = "./internal-tracing" }
kimchi = { path = "./kimchi", features = ["bn254"] }
kimchi-msm = { path = "./msm" }
kimchi-stubs = { path = "./kimchi-stubs" }
kimchi-visu = { path = "./tools/kimchi-visu" }
mina-base58 = { path = "./crates/mina-base58" }
mina-curves = { path = "./curves", features = ["asm"] }
mina-hasher = { path = "./hasher" }
mina-poseidon = { path = "./poseidon" }
mina-signer = { path = "./signer" }
mina-tx-type = { path = "./mina-tx-type" }
mvpoly = { path = "./mvpoly" }
o1-utils = { path = "./utils" }
o1vm = { path = "./o1vm" }
optimism = { path = "./optimism" }
plonk_wasm = { path = "./plonk-wasm" }
poly-commitment = { path = "./poly-commitment" }
signer = { path = "./signer" }
utils = { path = "./utils" }
wasm-types = { path = "./crates/wasm-types" }

[profile.release]
lto = true
panic = 'abort'
# codegen-units = 1

[profile.release.package.plonk_wasm]
debug = true
