[package]
name = "arrabiata"
version = "0.1.0"
repository = "https://github.com/o1-labs/proof-systems"
homepage = "https://o1-labs.github.io/proof-systems/"
documentation = "https://o1-labs.github.io/proof-systems/rustdoc/"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "arrabiata"
path = "src/main.rs"

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
ark-serialize.workspace = true
clap.workspace = true
derivative = "2"
groupmap.workspace = true
kimchi.workspace = true
itertools.workspace = true
log.workspace = true
mina-curves.workspace = true
mina-poseidon.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
o1-utils.workspace = true
poly-commitment.workspace = true
rand.workspace = true
rmp-serde.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_with.workspace = true
strum.workspace = true
strum_macros.workspace = true
rayon.workspace = true
thiserror.workspace = true