[package]
name = "mina-bip32"
version = "0.1.0"
description = "BIP32 hierarchical deterministic key derivation for Mina"
repository = "https://github.com/o1-labs/proof-systems"
homepage = "https://o1-labs.github.io/proof-systems/"
documentation = "https://o1-labs.github.io/proof-systems/rustdoc/"
readme = "README.md"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ark-ff.workspace = true
hex.workspace = true
hmac = "0.12"
mina-signer = { path = "../signer" }
sha2.workspace = true

[dev-dependencies]
pbkdf2 = "0.12"
