[package]
name = "mina-book"
version = "0.1.0"
description = "Documentation and specifications of the proof systems"
repository = "https://github.com/o1-labs/proof-systems"
homepage = "https://o1-labs.github.io/proof-systems/"
documentation = "https://o1-labs.github.io/proof-systems/rustdoc/"
readme = "README.md"
edition = "2021"
license = "Apache-2.0"

[build-dependencies]
cargo-spec = { version = "0.5.0" }
time = { version = "~0.3.31" }     # This crate is a known bad-actor for breaking rust version support.
plist = { version = "~1.5.0" }     # This crate improperly constrains its bad-actor dependency (`time`).
