[package]
description = "Documentation and specifications of the proof systems"
documentation = "https://o1-labs.github.io/proof-systems/rustdoc/"
edition = "2021"
homepage = "https://o1-labs.github.io/proof-systems/"
license = "Apache-2.0"
name = "mina-book"
readme = "README.md"
repository = "https://github.com/o1-labs/proof-systems"
version = "0.1.0"

[build-dependencies]
cargo-spec = { version = "0.5.0" }
plist = { version = "~1.5.0" }     # This crate improperly constrains its bad-actor dependency (`time`).
time = { version = "~0.3.31" }     # This crate is a known bad-actor for breaking rust version support.
