[package]
name = "mina-book"
description = "Documentation and specifications of the proof systems"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[build-dependencies]
cargo-spec = { version = "0.5.0" }
time = { version = "~0.3.31" }     # This crate is a known bad-actor for breaking rust version support.
plist = { version = "~1.5.0" }     # This crate improperly constrains its bad-actor dependency (`time`).
