[package]
name = "circuit-construction"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"
bench = false # needed for criterion (https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options)

[dependencies]
ark-ff = { version = "0.3.0", features = [ "parallel", "asm" ] }
ark-ec = { version = "0.3.0", features = [ "parallel" ] }
ark-poly = { version = "0.3.0", features = [ "parallel" ] }
ark-serialize = "0.3.0"
blake2 = "0.10.0"
num-derive = "0.3"
num-traits = "0.2"
itertools = "0.10.3"
rand = "0.8.0"
rand_core = "0.6.3"
rayon = "1.5.0"
rmp-serde = "1.0.0"
serde = "1.0.130"
serde_with = "1.10.0"
thiserror = "1.0.30"

commitment_dlog = { path = "../poly-commitment", version = "0.1.0" }
groupmap = { path = "../groupmap", version = "0.1.0" }
mina-curves = { path = "../curves", version = "0.1.0" }
o1-utils = { path = "../utils", version = "0.1.0" }
mina-poseidon = { path = "../poseidon", version = "0.1.0" }
kimchi = { path = "../kimchi", version = "0.1.0" }

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
colored = "2.0.0"

# benchmarks
criterion = "0.3"
iai = "0.1"
