[package]
name = "circuit-construction"
version = "0.1.0"
description = "A simple circuit writer for kimchi"
repository = "https://github.com/o1-labs/proof-systems"
edition = "2021"
license = "Apache-2.0"
homepage = "https://o1-labs.github.io/proof-systems/"
documentation = "https://o1-labs.github.io/proof-systems/rustdoc/"
readme = "../README.md"

[lib]
path = "src/lib.rs"
bench = false # needed for criterion (https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options)

[dependencies]
ark-ff.workspace = true
ark-ec.workspace = true
ark-poly.workspace = true
ark-serialize.workspace = true
blake2.workspace = true
num-derive.workspace = true
num-traits.workspace = true
itertools.workspace = true
rand.workspace = true
rand_core.workspace = true
rayon.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true

poly-commitment.workspace = true
groupmap.workspace = true
mina-curves.workspace = true
o1-utils.workspace = true
mina-poseidon.workspace = true
kimchi.workspace = true

[dev-dependencies]
proptest.workspace = true
proptest-derive.workspace = true
colored.workspace = true

# benchmarks
criterion.workspace = true
iai.workspace = true
