[package]
description = "The set of curves Mina protocol uses"
documentation = "https://o1-labs.github.io/proof-systems/rustdoc/"
edition = "2021"
homepage = "https://o1-labs.github.io/proof-systems/"
license = "Apache-2.0"
name = "mina-curves"
readme = "../README.md"
repository = "https://github.com/o1-labs/proof-systems"
version = "0.1.0"

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
num-bigint.workspace = true

[dev-dependencies]
ark-algebra-test-templates.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
ark-test-curves.workspace = true
rand.workspace = true
