[package]
name = "mina-curves"
version = "0.1.0"
description = "The set of curves Mina protocol uses"
repository = "https://github.com/o1-labs/proof-systems"
homepage = "https://o1-labs.github.io/proof-systems/"
documentation = "https://o1-labs.github.io/proof-systems/rustdoc/"
readme = "../README.md"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ark-bn254.workspace = true
ark-std.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
num-bigint.workspace = true
bnum.workspace = true
ark-serialize.workspace = true
wasm-bindgen.workspace = true
derivative.workspace = true
zeroize.workspace = true

[dev-dependencies]
rand.workspace = true
ark-test-curves.workspace = true
ark-algebra-test-templates.workspace = true
ark-std.workspace = true
