[package]
name = "mina-curves"
description = "The set of curves Mina protocol uses"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "../README.md"
repository.workspace = true
version.workspace = true

[features]
default = ["asm"]
# The MontConfig derive macro from ark_ff generates code with cfg(feature = "asm").
# This feature enables assembly optimizations in ark_ff.
asm = []

[dependencies]
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-secp256k1.workspace = true
ark-std.workspace = true
num-bigint.workspace = true

[dev-dependencies]
rand.workspace = true
ark-test-curves.workspace = true
ark-algebra-test-templates.workspace = true
ark-serialize.workspace = true
proptest.workspace = true
