[package]
name = "dlog"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
array-init = "1.0.0"
ark-ff = { version = "0.3.0", features = [ "parallel", "asm" ] }
ark-poly = { version = "0.3.0", features = [ "parallel" ] }
ark-ec = { version = "0.3.0", features = [ "parallel" ] }
colored = "1.9.2"
rand_core = { version = "0.5" }
rand = { version = "0.8.0", features = ["getrandom"] }
rayon = { version = "1" }
sprs = "0.7.1"

commitment_dlog = { path = "commitment" }
groupmap = { path = "../groupmap" }
kimchi-circuits = { path = "../circuits/kimchi" }
kimchi = { path = "kimchi" }
mina-curves = { path = "../curves" }
o1-utils = { path = "../utils" }
oracle = { path = "../oracle" }
plonk_protocol_dlog = { path = "plonk" }
plonk_circuits = { path = "../circuits/plonk" }
