[package]
name = "dlog"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dev-dependencies]
array-init = "2.0.0"
ark-ff = { version = "0.3.0", features = [ "parallel", "asm" ] }
ark-poly = { version = "0.3.0", features = [ "parallel" ] }
ark-ec = { version = "0.3.0", features = [ "parallel" ] }
colored = "2.0.0"
rand_core = "0.6.3"
rand = { version = "0.8.0", features = ["getrandom"] }
rayon = "1.5.1"
sprs = "0.11.0"

commit0.11.0dlog = { path = "commitment" }
groupmap = { path = "../groupmap" }
kimchi-circuits = { path = "../circuits/kimchi" }
kimchi = { path = "kimchi" }
mina-curves = { path = "../curves" }
o1-utils = { path = "../utils" }
oracle = { path = "../oracle" }
plonk_protocol_dlog = { path = "plonk" }
plonk_circuits = { path = "../circuits/plonk" }
