[package]
name = "dlog"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dev-dependencies]
rand_core = "0.6.3"
colored = "2.0.0"
rand = { version = "0.8.0", features = ["getrandom"] }
sprs = "0.11.0"
rayon = "1.5.1"
array-init = "2.0.0"
ark-ff = { version = "0.3.0", features = [ "parallel", "asm" ] }
ark-poly = { version = "0.3.0", features = [ "parallel" ] }
ark-ec = { version = "0.3.0", features = [ "parallel" ] }

commitment_dlog = { path = "../poly-commitment" }
groupmap = { path = "../groupmap" }
mina-curves = { path = "../curves" }
o1-utils = { path = "../utils" }
oracle = { path = "../oracle" }
plonk_protocol_dlog = { path = "plonk" }
plonk_circuits = { path = "../circuits/plonk" }
kimchi-circuits = { path = "../circuits/kimchi" }
kimchi = { path = "../kimchi" }
