load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    name = "dlog_solver",
    visibility = ["//visibility:public"],
    crate_type = "lib",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "@zexe//algebra",
        "//bzl/cargo:rand",
        "//bzl/cargo:rand_core",
        "//bzl/cargo:num_integer",
    ],
    crate_features = [
        "asm",
        "bn_382",
        "parallel",
        "tweedle"
    ]
)
