[package]
name = "dlog_solver"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
algebra = { path = "../../zexe/algebra", branch = "dlog-only-clean-cargo", features = [ "asm", "parallel", "bn_382", "tweedle" ] }
rand = "0.7.3"
num-integer = "0.1"
rand_core = { version = "0.5" }
