[package]
name = "dlog_solver"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
algebra = { path = "../zexe/algebra", features = [ "asm", "parallel", "bn_382", "tweedle" ] }
rand = "0.7.3"
num-integer = "0.1"
rand_core = { version = "0.5" }
wasm-bindgen = "0.2.69"
