[package]
name = "evaluation_domains"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
algebra = { path = "../../zexe/algebra", branch = "dlog-only-clean-cargo", features = [ "asm", "parallel", "bn_382", "tweedle" ] }
ff-fft = { path = "../../zexe/ff-fft", branch = "dlog-only-clean-cargo" }
