[package]
name = "folding"
version = "0.1.0"
repository = "https://github.com/o1-labs/proof-systems"
homepage = "https://o1-labs.github.io/proof-systems/"
documentation = "https://o1-labs.github.io/proof-systems/rustdoc/"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ark-serialize.workspace = true
o1-utils.workspace = true
itertools.workspace = true
log.workspace = true
kimchi.workspace = true
poly-commitment.workspace = true
groupmap.workspace = true
mina-curves.workspace = true
mina-poseidon.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
rmp-serde.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_with.workspace = true
strum.workspace = true
strum_macros.workspace = true
ark-poly.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
rand.workspace = true
rayon.workspace = true
thiserror.workspace = true
derivative = "2"

[dev-dependencies]
ark-bn254.workspace = true