[package]
authors = [
  "Rebekah Mercer <github@rbkhmrcr.com>",
  "Izaak Meckler <izaak@o1labs.org>",
]
description = "A group map implementation"
documentation = "https://o1-labs.github.io/proof-systems/rustdoc/"
edition = "2021"
homepage = "https://o1-labs.github.io/proof-systems/"
license = "Apache-2.0"
name = "groupmap"
readme = "../README.md"
repository = "https://github.com/o1-labs/proof-systems"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
rand.workspace = true

[dev-dependencies]
mina-curves.workspace = true
