[package]
name = "groupmap"
authors = [
  "Rebekah Mercer <github@rbkhmrcr.com>",
  "Izaak Meckler <izaak@o1labs.org>",
]
description = "A group map implementation"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "../README.md"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true

[dev-dependencies]
mina-curves.workspace = true
rand.workspace = true
