[package]
name = "mina-hasher"
version = "0.1.0"
description = "The hasher used by Mina"
repository = "https://github.com/o1-labs/proof-systems"
homepage = "https://o1-labs.github.io/proof-systems/"
documentation = "https://o1-labs.github.io/proof-systems/rustdoc/"
readme = "README.md"
edition = "2021"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
mina-poseidon.workspace = true
mina-curves.workspace = true
o1-utils.workspace = true

ark-ff.workspace = true

bitvec.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
