[package]
description = "The hasher used by Mina"
documentation = "https://o1-labs.github.io/proof-systems/rustdoc/"
edition = "2021"
homepage = "https://o1-labs.github.io/proof-systems/"
license = "Apache-2.0"
name = "mina-hasher"
readme = "README.md"
repository = "https://github.com/o1-labs/proof-systems"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[dependencies]
ark-ff.workspace = true
bitvec.workspace = true
mina-curves.workspace = true
mina-poseidon.workspace = true
o1-utils.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
