[package]
name = "mina-hasher"
description = "The hasher used by Mina"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ark-ff.workspace = true
bitvec.workspace = true
mina-curves.workspace = true
mina-poseidon.workspace = true
o1-utils.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
