[package]
name = "internal-tracing"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ocaml = { version = "0.22.2", optional = true }
ocaml-gen = { version = "1.0.0", optional = true }
#ocaml = { workspace = true, optional = true }
#ocaml-gen = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }

[features]
enabled = ["serde", "serde_json"]
ocaml_types = ["ocaml", "ocaml-gen"]
