[package]
name = "internal-tracing"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ocaml = { workspace = true, optional = true }
ocaml-gen = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }

[features]
enabled = ["serde", "serde_json"]
ocaml_types = ["ocaml", "ocaml-gen"]
