[package]
name = "internal-tracing"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ocaml = { workspace = true, optional = true }
ocaml-gen = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = ["std"]
std = []
enabled = ["std", "serde", "serde_json"]
ocaml_types = ["ocaml", "ocaml-gen"]
