[package]
name = "ivc"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254.workspace = true
ark-ff.workspace = true
kimchi.workspace = true
kimchi-msm.workspace = true
mina-poseidon.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
o1-utils.workspace = true
once_cell.workspace = true
poly-commitment.workspace = true
rand.workspace = true
strum.workspace = true
strum_macros.workspace = true
