[package]
edition = "2021"
name = "ivc"
version = "0.1.0"

[dependencies]
# We should make this optional in the future.
# We want to make the crate generic for any curve that has nearly the same
# properties than bn254
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
folding.workspace = true
itertools.workspace = true
kimchi.workspace = true
kimchi-msm.workspace = true
mina-poseidon.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
o1-utils.workspace = true
once_cell.workspace = true
poly-commitment.workspace = true
rand.workspace = true
rayon.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
